2014-01-19  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: Characters with nukta of not only devanagari but also
	  other indic languages are converted from unicode to ISCII.

2014-01-19  Araki Ken  <arakiken@users.sf.net>

	* ml_logical_visual_iscii.c: Logicalizing iscii characters is simplified
	  by ml_line_iscii_logical().

	* ml_line_iscii.[ch]: ml_line_iscii_logical() is added.

	* ml_vt100_parser.c: The conversion table from U+90c and U+960-963 to ISCII
	  is added.

	* hindi.table: ISCII "\xaa\xe9"(== U+9600) => FONT "\x41\xf1" is added.

	* syllable.lex:
	  {VOWELS}{VOWMOD}?, {VOWMOD}{NUKTA}? and {NUKUTA} are integrated to
	  {VOWELS}?{VOWMOD}?{NUKUTA}? to parse "\xaa\xe9"(=={VOWELS}{NUKTA}).

2014-01-18  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c:
	  U+950 and U+958-95e are converted to two ISCII characters.

	* ml_line_iscii.c, ml_logical_visual_iscii.c, ml_screen.c:
	  - The number of characters in lines is increased if visual iscii
	    glyphs need more. It is decreased as before when iscii characters
	    are converted to logical.
	  - iscii_render_line() is called from iscii_visual_line() in
	    ml_logical_visual_iscii.c.

	* ml_iscii.c:
	  - The rendering of iscii characters in ml_iscii() is fixed.
	  - ml_iscii_copy() copied has_iscii flag.

	* ml_logical_visual_bidi.c: Cleanup code.

	* x_screen.c: Minor fixes.

2014-01-12  Araki Ken  <arakiken@users.sf.net>

	* x_display_freebsd.c: Configuration for M_PC98_EGC640x400 is added.

	* x.h, x_display_wscons.c:
	  size_t plane_len is changed to size_t plane_offset[8] in Display structure.

	* doc/ja/Usage.win32: Added.

2014-01-11  Araki Ken  <arakiken@users.sf.net>

	* MLActivity.java:
	  - NativeContentView and TextInputConnection inner classes
	    are added to support Google IME.
	  - IME is hidden on pause and shown on restart.

	* android/jni/x_event_source.c: commitText and preeditTexit native methods
	  which output text from IME are added.

	* xwindow/Makefile.in: